--- a/Views/css/site-wide.css
+++ b/Views/css/site-wide.css
@@ -464,7 +464,7 @@ ul {
 
 
 .table-container{
-    width:100%;
+
     padding:0;
     justify-content: flex-start;
     margin-left:84px;
@@ -477,7 +477,7 @@ ul {
              justify-content: flex-start;
 }   
 
-.flex-row{ width:440px;height:500px;  padding:10px;
+.flex-row{ width:440px;height:500px;  
            margin-bottom:20px;
 
 }   
@@ -490,7 +490,6 @@ ul {
 
 .card{
     width: 25rem;
-    margin-right:30px;
     border:0;
     border-radius: 0px;
 }
